# enricher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  config.example.yaml  docker-compose.yml  pyproject.toml
enricher/: elasticsearch.py
enricher/cli/: config.py  enrich.py  main.py
fixtures/: add_ids-01.json  gleif-01.json  index-example.py
gleif_enricher/: cli.py  config.py  elasticsearch.py  enrich.py
gleif_enricher/cli/: config.py  enrich.py  main.py
