[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Open Ownership", email = "info@openownership.org"},
]
license = {text = "AGPL-3.0"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "click<9.0.0,>=8.1.8",
    "elasticsearch<9.0.0,>=8.17.1",
    "requests<3.0.0,>=2.32.3",
    "boto3<2.0.0,>=1.36.5",
    "pyyaml<7.0.0,>=6.0.2",
]
name = "enricher"
version = "0.1.0"
description = "Enrichment tool for GLEIF data"

[project.scripts]
enricher = "enricher.cli:main"

[dependency-groups]
dev = [
    "black<26.0.0,>=25.1.0",
    "flake8<8.0.0,>=7.1.1",
]
